# gpt-omics

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gpt-neo-env.yml  pyproject.toml  setup.cfg  setup.py
data/: gpt-j-weight-singular-values.npz  gpt-neo-1.3B-weight-singular-values.npz  gpt-neo-125M-weight-singular-values.npz  gpt-neo-2.7B-weight-singular-values.npz
gptomics/: composition.py  functional.py  gptneo.py  graph.py  huggingface.py  model.py  pairengine.py  parambag.py  plot.py  svd.py  torchio.py  transformersio.py  types.py
notebooks/: 220408_qk_ov_scratch.ipynb  220419_naive_composition_scratch.ipynb  220419_qk_ov_clean.ipynb  220426_IO_dims.ipynb  220426_validating_simple_vweights.ipynb  220427_demeaned_composition_scratch.ipynb  220427_layernorm.ipynb  220427_loading_test.ipynb  220428_considering_mlp_weights_scratch.ipynb  220428_demeaned_composition_scratch.ipynb  220428_inital_125M_results_scratch.ipynb  220501_125M_exploration.ipynb  220509_initial_gptj_run.ipynb  220514_graphs.ipynb  220614_init_baseline.ipynb  220820_checking_attention_patterns.ipynb  220905_attention_patterns.ipynb  221026_checking_logit_attrs.ipynb  221102_combined_analysis.ipynb  221113_sender_heads.ipynb  230116_1.3B_analysis.ipynb  230116_125M_analysis.ipynb  230116_2.7B_analysis.ipynb  230116_graphs.ipynb  230117_j_analysis.ipynb  composition_sigmas.ipynb  sigma_sorting.ipynb
scripts/: compute_all_compositions.py  compute_all_singular_values.py  compute_principal_components_composition.py  compute_weight_singular_values.py  function.py  scores.py
(+6 files in other folders)
