[metadata]
name = gpt-omics
version = 0.0.0
description = Attention head direct bandwidth connectomes of large language models
long_description = file: README.rst
keywords = Transformers, NLP, AI, Interpretability
maintainer = Nicholas Turner
maintainer_email = nicholaslarryturner@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    pandas
    python_version>="3.7"
    torch
